--- a/public/css/style.css
+++ b/public/css/style.css
@@ -127,13 +127,21 @@ footer{
 }
 #press_start{
   position: fixed;
-  background: black;
+  background: #ECEFF1;
   width: 100%;
   height: 100%;
   z-index: 5;
-  padding-top:300px;
   text-align:center;
   color:rgba(255, 255, 255, 0.35);
+}
+#press_start_btn{
+  -webkit-transition: all 0.5s linear;
+  opacity: 0.3;
+}
+#press_start_btn:hover{
+  cursor: pointer;
+  opacity: 1;
+  -webkit-transition: all 0.5s linear;
 }
 #game_over{
   position: fixed;
