--- a/public/css/style.css
+++ b/public/css/style.css
@@ -145,11 +145,11 @@ footer{
 }
 #game_over{
   position: fixed;
-  background: black url('../images/gameover.jpg') center no-repeat;
+  background: #efb8ca url('../images/Untitled-1.png') center no-repeat;
   width: 100%;
   height: 100%;
   z-index: 4;
-  padding-top:460px;
+  padding-top:392px;
   text-align:center;
 }
 #press_start p{
