--- a/public/css/style.css
+++ b/public/css/style.css
@@ -191,3 +191,11 @@ footer{
   margin: auto;
   width: 100%;
 }
+#login{
+  background: #bebfc3;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  text-align: center;
+  cursor: pointer;
+}
